traversal.snake.Snake.scala.error
Compilation error:
Snake:29: error: '(' expected but '{' found.
  } while {direction==false}
          ^